--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
         "cwd": "${workspaceRoot}",
         "executable": "${command:cmake.launchTargetPath}",
         "request": "launch",
-        "type": "cortext-debug",
+        "type": "cortex-debug",
         "servertype": "openocd",
         "gdbPath": "gdb-multiarch",
         "device": "RP2040",
@@ -13,11 +13,12 @@
             "interface/raspberrypi-swd.cfg",
             "target/rp2040.cfg"
         ],
-        "svdFile": "${env:PICO_SDK_PATH}/src/rp2040/hardware_regs/rp2040.svd",
+        "svdFile": "/home/ubuntu/pico/pico-sdk/src/rp2040/hardware_regs/rp2040.svd",
         "runToMain": true,
         "postRestartCommands": [
             "break main",
             "continue"
-        ]
+        ],
+        "showDevDebugOutput": true 
     }]
 }
