--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,24 +1,20 @@
 {
-    "version": "0.2.0",
-    "configurations": [{
-        "name": "Pico Debug",
-        "cwd": "${workspaceRoot}",
-        "executable": "${command:cmake.launchTargetPath}",
-        "request": "launch",
-        "type": "cortex-debug",
-        "servertype": "openocd",
-        "gdbPath": "gdb-multiarch",
-        "device": "RP2040",
-        "configFiles": [
-            "interface/raspberrypi-swd.cfg",
-            "target/rp2040.cfg"
-        ],
-        "svdFile": "/home/ubuntu/pico/pico-sdk/src/rp2040/hardware_regs/rp2040.svd",
-        "runToMain": true,
-        "postRestartCommands": [
-            "break main",
-            "continue"
-        ],
-        "showDevDebugOutput": true 
-    }]
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Cortex Debug",
+      "cwd": "${workspaceRoot}",
+      "executable": "${command:cmake.launchTargetPath}",
+      "request": "launch",
+      "type": "cortex-debug",
+      "servertype": "openocd",
+      "gdbPath": "gdb-multiarch",
+      "device": "RP2040",
+      "configFiles": ["interface/raspberrypi-swd.cfg", "target/rp2040.cfg"],
+      "svdFile": "${env:PICO_SDK_PATH}/src/rp2040/hardware_regs/rp2040.svd",
+      "runToMain": true,
+      "postRestartCommands": ["break main", "continue"],
+      "showDevDebugOutput": "vscode"
+    }
+  ]
 }
