add ros pakage and move motor controller

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
-    "files.associations": {
-        "ostream": "cpp",
-        "iostream": "cpp",
-        "random": "cpp"
-    }
+  "files.associations": {
+    "ostream": "cpp",
+    "iostream": "cpp",
+    "random": "cpp"
+  },
+  "cmake.sourceDirectory": "${workspaceFolder}/pico_motor_controller"
 }
