--- a/ros2pkg/src/mecanumbot/CMakeLists.txt
+++ b/ros2pkg/src/mecanumbot/CMakeLists.txt
@@ -1,3 +1,6 @@
+set(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
+set(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
+
 cmake_minimum_required(VERSION 3.8)
 project(mecanumbot)
 
@@ -7,9 +10,24 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(std_msgs REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
+
+add_executable(sub_motor_controller 
+  ${SRC_DIR}/sub_motor_controller.cpp
+)
+ament_target_dependencies(sub_motor_controller rclcpp std_msgs)
+target_include_directories(sub_motor_controller PUBLIC
+  $<BUILD_INTERFACE:${INCLUDE_DIR}>
+  $<INSTALL_INTERFACE:include>)
+target_compile_features(sub_motor_controller PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17
+
+install(TARGETS 
+  sub_motor_controller
+  DESTINATION lib/${PROJECT_NAME})
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
