--- a/micro_ros_motor_ctrl/.vscode/settings.json
+++ b/micro_ros_motor_ctrl/.vscode/settings.json
@@ -5,7 +5,8 @@
     "twist__functions.h": "c",
     "twist__type_support.h": "c",
     "mecanumbot.h": "c",
-    "bimotor.h": "c"
+    "bimotor.h": "c",
+    "pwm.h": "c"
   },
   // "cmake.sourceDirectory": "${workspaceFolder}/pico_motor_controller",
   "cmake.configureEnvironment": {
