--- a/micro_ros_motor_ctrl/.vscode/settings.json
+++ b/micro_ros_motor_ctrl/.vscode/settings.json
@@ -10,6 +10,7 @@
   },
   // "cmake.sourceDirectory": "${workspaceFolder}/pico_motor_controller",
   "cmake.configureEnvironment": {
-    "PICO_SDK_PATH": "/home/robodev/pico/pico-sdk"
+    "PICO_SDK_PATH": "/home/robodev/micro_ros_ws/src/pico-sdk",
+    "MICRO_ROS_PICO_SDK_DIR": "/home/robodev/micro_ros_ws/src/micro_ros_raspberrypi_pico_sdk"
   }
 }
