create ws /w launch file and copy of telop joy package

--- a/mecanumbot_v1_ws/src/mecanumbot/CMakeLists.txt
+++ b/mecanumbot_v1_ws/src/mecanumbot/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(mecanumbot_v1_pkg)
+project(mecanumbot)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -10,6 +10,18 @@ find_package(ament_cmake REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
+
+add_executable(mecanumbot_node src/mecanumbot_node.cpp)
+target_include_directories(mecanumbot_node PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:include>)
+target_compile_features(mecanumbot_node PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17
+
+install(TARGETS mecanumbot_node
+  DESTINATION lib/${PROJECT_NAME})
+
+install(DIRECTORY launch
+  DESTINATION share/${PROJECT_NAME})
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
