--- a/mecanumbot_v1_ws/src/mecanumbot/package.xml
+++ b/mecanumbot_v1_ws/src/mecanumbot/package.xml
@@ -1,16 +1,23 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>mecanumbot_v1_pkg</name>
-  <version>0.0.0</version>
+  <name>mecanumbot</name>
+  <version>1.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="dewilliam0327@gmail.com">robodev</maintainer>
+  <maintainer email="dewilliam0327@gmail.com">Dwayne Williams</maintainer>
+
   <license>TODO: License declaration</license>
+
+  <url type="website">http://wiki.ros.org/teleop_twist_joy</url>
+  <author email="dewilliam0327@gmail.com">Dwayne Williams</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
+  <test_depend>launch_ros</test_depend>
+  <test_depend>launch_testing_ament_cmake</test_depend>
+  <test_depend>launch_testing_ros</test_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
