working mutli core code

--- a/micro_ros_motor_ctrl/.vscode/settings.json
+++ b/micro_ros_motor_ctrl/.vscode/settings.json
@@ -7,11 +7,15 @@
     "mecanumbot.h": "c",
     "bimotor.h": "c",
     "pwm.h": "c",
-    "stdio.h": "c"
+    "stdio.h": "c",
+    "pthread.h": "c",
+    "pico_uart_transports.h": "c",
+    "stdlib.h": "c",
+    "events.h": "c"
   },
   // "cmake.sourceDirectory": "${workspaceFolder}/pico_motor_controller",
   "cmake.configureEnvironment": {
-    "PICO_SDK_PATH": "/home/robodev/micro_ros_ws/src/pico-sdk",
-    "MICRO_ROS_PICO_SDK_DIR": "/home/robodev/micro_ros_ws/src/micro_ros_raspberrypi_pico_sdk"
+    "PICO_SDK_PATH": "/home/robodev/pico/pico-sdk",
+    "MICRO_ROS_PICO_SDK_DIR": "/home/robodev/micro_ros_raspberrypi_pico_sdk"
   }
 }
