--- a/mecanumbot_v1_ws/src/mecanumbot/localization_data_pub/package.xml
+++ b/mecanumbot_v1_ws/src/mecanumbot/localization_data_pub/package.xml
@@ -12,6 +12,9 @@
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
+  <depend package="tf"/>
+  <depend package="nav_msgs"/>
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
