--- a/mecanumbot_v1_ws/src/mecanumbot/package.xml
+++ b/mecanumbot_v1_ws/src/mecanumbot/package.xml
@@ -12,6 +12,10 @@
   <author email="dewilliam0327@gmail.com">Dwayne Williams</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <depend>rclcpp</depend>
+  <depend>std_msgs</depend>
+  <depend>tf</depend>
+  <depend>nav_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
