--- a/mecanumbot_v1_ws/src/localization_data_pub/CMakeLists.txt
+++ b/mecanumbot_v1_ws/src/localization_data_pub/CMakeLists.txt
@@ -1,53 +1,38 @@
 cmake_minimum_required(VERSION 3.8)
-project(mecanumbot)
+project(localization_data_pub)
+
+INCLUDE_DIRECTORIES(/usr/local/lib)
+LINK_DIRECTORIES(/usr/local/lib)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
 # find dependencies
-
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
-find_package(std_msgs REQUIRED)
-find_package(nav_msgs REQUIRED)
 find_package(tf2 REQUIRED)
 find_package(tf2_ros REQUIRED)
-find_package(tf2_geometry_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
 
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
 
-add_executable(mecanumbot_node 
-  include/mecanumbot/odometry_pub.hpp
-  src/mecanumbot_node.cpp 
-  src/odometry_pub.cpp 
+add_executable(rviz_click_to_2d 
+  src/rviz_click_to_2d.cpp 
 )
-ament_target_dependencies(mecanumbot_node 
-  rclcpp 
-  std_msgs 
-  tf2_geometry_msgs 
-  nav_msgs 
-  tf2_ros 
+
+ament_target_dependencies(rviz_click_to_2d 
+  rclcpp
+  geometry_msgs
   tf2
+  tf2_ros
 )
 
-install(TARGETS
-  mecanumbot_node
-  DESTINATION lib/${PROJECT_NAME})
-
-target_include_directories(mecanumbot_node PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  $<INSTALL_INTERFACE:include>)
-
-target_compile_features(mecanumbot_node PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17
-
-install(TARGETS mecanumbot_node
-  DESTINATION lib/${PROJECT_NAME})
-
-install(DIRECTORY launch
-  DESTINATION share/${PROJECT_NAME})
+install(TARGETS rviz_click_to_2d
+  DESTINATION lib/${PROJECT_NAME}
+)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
